# CMatrix

./: .gitignore  AutoGenTest.h  CMakeLists.txt  MatrixTest.txt  README.md  development.h  development3.h  main.c  tests.h
helpers/: nnc_activation_layer.c  nnc_activation_layer.h  nnc_config.c  nnc_config.h  nnc_datasets.h  nnc_debug.c  nnc_debug.h  nnc_dense_layer.c  nnc_dense_layer.h  nnc_exporter.c  nnc_exporter.h  nnc_importer.c  nnc_importer.h  nnc_layer.c  nnc_layer.h  nnc_list.c  nnc_list.h  nnc_loss_function.c  nnc_loss_function.h  nnc_matrix.c  nnc_matrix.h  nnc_model.c  nnc_model.h  nnc_optimizer.c  nnc_optimizer.h  nnc_serializer.c  nnc_serializer.h  nnc_statistics.c  nnc_statistics.h  nnc_string.c  nnc_string.h  nnc_trainer.c  nnc_trainer.h  nnc_vector.c  nnc_vector.h
tests/: check.py  check3.py  gen_c_test.py  tmp.py
training/: AutoGenTest.h
training/datasets/: dataset_numbers_1000_truth_test.matrix  dataset_numbers_1000_truth_train.matrix  dataset_numbers_100_test.matrix  dataset_numbers_100_truth_test.matrix  dataset_numbers_100_truth_train.matrix
training/tests/: check.py  check2.py  fashionDataPreparation.py  genMatrixMul.py  gen_c_test.py  gencout.txt  numbersDataPreparation.py  tmp.py
